# project_center

./: .deps_hash.txt  .gitignore  README.md  config.yaml  config_reader.py  config_reader.sh  deploy.py  git_bash.bat  prompt.txt  start_all.bat  start_all.py  start_all.sh  stop_all.bat  stop_all.sh  配置说明.md
backend/: .deps_checksum.txt  .deps_hash.txt  README.md  alter_table.sql  check_db.py  check_db_output.txt  check_project.py  debug_project_storage.py  fix_project_storage.py  install.py  install_deps.py  project_data.json  pyproject.toml  requirements-dev.txt  run_tests.py  test_create_user.py  test_file_list.py  test_full_flow.py  test_upload_manual.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: api.py  auth.py  deployments.py  deps.py  files.py  logs.py  machines.py  test_deployments.py
backend/app/auth/: dependencies.py
backend/app/core/: auth.py  config.py  logs.py  machines.py  security.py
backend/app/db/: base_class.py  database.py
backend/app/models/: __init__.py  log.py  machine.py  machine_log.py  project.py  user.py
backend/app/schemas/: deployment.py  log.py  machine.py  project.py  user.py
backend/scripts/: add_avatar_column.py  add_password_column.py  check_machine.py  check_permissions.py  check_table.py  check_tables.py  create_test_user.py  fix_table.py  rebuild_deployment_table.py  replace_machine_logs.py  update_log_table.py  update_machine_password.py  update_project_machine_tables.py
backend/tests/: conftest.py  run_test.py  test_run_sync_project.py  test_sync_project.py  test_upload.py
frontend/: index.html  (+3 more)
(+65 files in other folders)
