[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_center_backend"
version = "0.1.0"
description = "项目管理中心后端"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.5",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "tomli>=2.0.0",
    "psutil",
    "pathspec",
    "paramiko",
    "pyyaml",
    "aiofiles",
    "python-magic-bin;platform_system=='Windows'",
    "python-magic;platform_system!='Windows'"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# 移除了不兼容的工具配置 